[FIX] web: fix color picker selected color visibility in dark mode
This commit fixes an issue related to Commit[1], which used `#fff` to
style the active color within the color picker. While this works fine in
light mode as we do not tweak the `$o-colors` map that much, it does not
provide good results in dark mode as the colors are drastically adjusted.

With this commit, we use a dynamic value instead of a static one, ensuring
it will provide good results in both light and dark mode.

[1]: 1aa9b957afdd1413f6241ce2e408b96f9e934242

task-5089121
related to task-5049476

closes odoo/odoo#227336

X-original-commit: 7459d74f4a99762cf1d0b6390b9ab2281e8af846

--- a/addons/web/static/src/core/colorlist/colorlist.scss
+++ b/addons/web/static/src/core/colorlist/colorlist.scss
@@ -18,7 +18,7 @@
         @for $size from 2 through length($o-colors) {
             &.o_colorlist_item_color_#{$size - 1} {
                 @include o-print-color(nth($o-colors, $size), background-color, bg-opacity);
-                @include o-print-color(#FFF, color, text-opacity);
+                @include o-print-color($o-white, color, text-opacity);
             }
         }
 
